Main.css
body {

    color: rgb(170, 150, 250);
    font-family: "Adobe Garamond Pro", sans-serif;
    font-size: 22px;
    align-content: center;
    text-align: center;
    margin: 0;
    padding: 0;

}

div.tab button {
    background-color: #33032B;
    color: #F0EADF;
    padding: 16px;
    font-size: 16px;
    border: none;
    cursor: pointer;

}

.dropbtn {
    background-color: #33032B;
    color: #F0EADF;
    font-size: 16px;
    border: none;
    cursor: pointer;

}

.dropdown {
    position: relative;
    display: inline-block;

}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #33032B;
    z-index: 1;

}

.dropdown-content a {
    color: black;
    padding: 0 16px;
    text-decoration: none;
    display: block;

}

.dropdown-content a:hover {
    background-color: #532C3F;

}

.dropdown:hover .dropdown-content {
    display: block;

}

.dropdown:hover .dropbtn {
    background-color: #532C3F;

}

.tablinks:hover {
    background-color: #532C3F;

}

h1 {
    color: white;
    font-family: "Snell Roundhand", cursive;
    font-size: 42px;
    align-content: center;
    text-align: center;
    border-style: none;

}

h2 {

    color: rgb(150, 50, 100);
    font-family: Consolas, serif;
    font-size: 30px;
    align-content: center;
    text-align: center;
    text-shadow: 2px 2px #761c19;

}

.tab {
    align-content: center;
    color: rgb(100, 20, 150);
    font-family: "Gill Sans", serif;
    font-size: 18px;
    padding-bottom: 2%;

}

.tabcontent {
    font-family: "Gill Sans", serif;
    color: #0f0f0f;

}

@media (min-width: 500px) {
    .column {
        height: 25%;
        column-gap: 40px;
    }
}

@media (max-width: 600px) {
    .column {
        padding-left: 3%;
        padding-right: 3%;

    }

}

.banner {

    width: 100%;
    height: 212px;
    background-image: url("img/lilacbanner.png");
    background-repeat: no-repeat;
    background-position: center;
    text-align: center;

}

.text {
    text-align: center;
    padding-top: 85px;
    color: #D1D2D4;
}

.intro {
    background: url("img/IntroPage.jpg") #835468;
    background-size: cover;
    height: 100%;
    width: 100%;
    color: white;
    font-family: "Snell Roundhand", cursive;
    font-size: 42px;
    font-weight: 600;
    align-content: center;
    text-align: center;
    border-style: none;

}

.page {
    width: 80%;
    margin: auto;
    align-content: center;
}

#grad {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#grad:hover {
    opacity: 0.7;
}

#brewery {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#brewery:hover {
    opacity: 0.7;
}

#momgrad {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#momgrad:hover {
    opacity: 0.7;
}

#running {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#running:hover {
    opacity: 0.7;
}

#flight {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#flight:hover {
    opacity: 0.7;
}

#wedding {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#wedding:hover {
    opacity: 0.7;
}

#wedding2 {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#wedding2:hover {
    opacity: 0.7;
}

#xmas {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#xmas:hover {
    opacity: 0.7;
}

#happyeng {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#happyeng:hover {
    opacity: 0.7;
}

#eyeseng {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#eyeseng:hover {
    opacity: 0.7;
}

#ringeng {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#ringeng:hover {
    opacity: 0.7;
}

#bencheng {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#bencheng:hover {
    opacity: 0.7;
}

#hugeng {
    border-radius: 5px;
    cursor: pointer;
    transition: 0.3s;
}

#hugeng:hover {
    opacity: 0.7;
}

.modal {
    display: none; /* Hidden by default */
    position: fixed;
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0, 0, 0); /* Fallback color */
    background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
}

.modal-content {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
}

.modal-content, #caption {
    -webkit-animation-name: zoom;
    -webkit-animation-duration: 0.6s;
    animation-name: zoom;
    animation-duration: 0.6s;
}

#caption {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
    text-align: center;
    color: #ccc;
    padding: 10px 0;
    height: 150px;
}

@-webkit-keyframes zoom {
    from {
        -webkit-transform: scale(0)
    }
    to {
        -webkit-transform: scale(1)
    }
}

@keyframes zoom {
    from {
        transform: scale(0)
    }
    to {
        transform: scale(1)
    }
}

.close {
    position: absolute;
    top: 15px;
    right: 35px;
    color: #f1f1f1;
    font-size: 40px;
    font-weight: bold;
    transition: 0.3s;
}

.close:hover,
.close:focus {
    color: #bbb;
    text-decoration: none;
    cursor: pointer;
}

@media only screen and (max-width: 700px) {
    .modal-content {
        width: 100%;
    }
}

.typewriter {
    color: #33032B;
    font-family: 'Gill Sans', cursive;
    overflow: hidden; /* Ensures the content is not revealed until the animation */
    white-space: nowrap; /* Keeps the content on a single line */
    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
    letter-spacing: .1em;
    animation: typing 5s steps(30, end),
    blink-caret .5s;
}

/* The typing effect */
@keyframes typing {
    from {
        width: 0
    }
    to {
        width: 100%
    }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
    from, to {
        border-color: transparent
    }
    50% {
        border-color: rebeccapurple
    }
}

@media screen and (max-width: 780px) {

    .dropdown {
        /*display: block;*/
        position: relative;
        display: inline-block;
    }

    .tablinks {
        margin-bottom: 1px;
    }

    .dropdown .tablinks .dropdown-content .dropbtn a {
        width: 100%;
    }

    .tabcontent {
        margin-top: 13%;
    }

}

